force-app/main/default/objects/Provider__c/Provider__c.object-meta.xml
<CustomObject>
    <label>Provider</label>
    <pluralLabel>Providers</pluralLabel>
    <nameField>
        <label>Provider Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>