force-app/main/default/objects/Provider__c/fields/Specialty__c.field-meta.xml
<CustomField>
    <fullName>Specialty__c</fullName>
    <label>Specialty</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cardiology</fullName>
            </value>
            <value>
                <fullName>Dermatology</fullName>
            </value>
            <value>
                <fullName>Endocrinology</fullName>
            </value>
            <value>
                <fullName>Family Medicine</fullName>
            </value>
            <value>
                <fullName>Internal Medicine</fullName>
            </value>
            <value>
                <fullName>Neurology</fullName>
            </value>
            <value>
                <fullName>Oncology</fullName>
            </value>
            <value>
                <fullName>Orthopedics</fullName>
            </value>
            <value>
                <fullName>Pediatrics</fullName>
            </value>
            <value>
                <fullName>Psychiatry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>